--- a/app/globals.css
+++ b/app/globals.css
@@ -1542,11 +1542,14 @@ details > p, details ul li {
 }
 .apartments-list-grid li {
   height: 100%;
+  width: 100%;
 }
 .apartments-list-grid li a:hover {
 text-decoration: none;
 }
 .apartments-flex {
+  display: flex;
+  justify-content: center;
   padding-bottom: 3rem;
 }
 @media only screen and (min-width:599px) {
@@ -1555,6 +1558,9 @@ text-decoration: none;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     align-items: baseline;
     grid-gap: 2rem;
+}
+.apartments-flex {
+  display:block;
 }
 }
 .apartments-list-grid > div {
